<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/notificationAppBar"
        android:icon="@drawable/icon_notification"
        android:title="@string/notification"
        app:showAsAction="always" />

    <item
        android:id="@+id/shareAppBar"
        android:icon="@drawable/icon_share"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/settingsAppBar"
        android:icon="@drawable/icon_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/locationAppBar"
        android:icon="@drawable/icon_location"
        android:title="@string/location" />

</menu>